test/files/invalid/docstring_union.fbs
//! Okay
/// Okay
//! Bad1
/// Okay
union /// Bad2
/// Bad3
Foo /// Bad4
/// Bad5
{ /// Bad6
  //! Bad7
  /// Okay
  x /// Bad8
  /// Bad9
  : /// Bad10
  /// Bad11
  Bar /// Bad12
  /// Bad13
  , /// Bad14
  //! Bad15
  /// Okay
  Baz /// Bad16
/// Bad17
} /// Bad18
//! Bad19


table Bar {}
table Baz {}
